[gd_scene load_steps=19 format=3 uid="uid://bng8vo1tby4gh"]

[ext_resource type="Script" path="res://enemys/enemy.gd" id="1_iqpne"]
[ext_resource type="Script" path="res://components/stats_component.gd" id="1_ogcva"]
[ext_resource type="Script" path="res://components/move_component.gd" id="2_tkrrf"]
[ext_resource type="Script" path="res://components/scale_component.gd" id="3_art0g"]
[ext_resource type="Script" path="res://components/flash_component.gd" id="4_sgibo"]
[ext_resource type="Script" path="res://components/shake_component.gd" id="5_x8yn2"]
[ext_resource type="Script" path="res://components/hurtbox_component.gd" id="7_rbyvk"]
[ext_resource type="Script" path="res://components/hitbox_component.gd" id="8_0e4hv"]
[ext_resource type="Script" path="res://components/hurt_component.gd" id="9_exd52"]
[ext_resource type="Script" path="res://components/spawner_component.gd" id="10_sptks"]
[ext_resource type="PackedScene" uid="uid://sj77xvdwskgg" path="res://effects/explosion_effect.tscn" id="11_kt3vg"]
[ext_resource type="Script" path="res://components/destroyed_component.gd" id="12_ifdfq"]
[ext_resource type="Script" path="res://components/score_component.gd" id="13_6wiho"]
[ext_resource type="Resource" uid="uid://uogyw4q1gv7e" path="res://game_stats.tres" id="14_eyqu4"]
[ext_resource type="PackedScene" uid="uid://bldda3o05g8cj" path="res://upgrades/upgrade.tscn" id="15_xyl2a"]
[ext_resource type="Script" path="res://components/upgrade_randomizer.gd" id="16_vv8oi"]
[ext_resource type="AudioStream" uid="uid://cux83gx4as8tt" path="res://sounds/hit_sound.wav" id="17_ltgn5"]
[ext_resource type="Script" path="res://components/variable_pitch_audio_stream_player.gd" id="18_ifb6r"]

[node name="Enemy" type="Node2D"]
script = ExtResource("1_iqpne")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]

[node name="StatsComponent" type="Node" parent="."]
script = ExtResource("1_ogcva")

[node name="MoveComponent" type="Node" parent="." node_paths=PackedStringArray("actor")]
script = ExtResource("2_tkrrf")
actor = NodePath("..")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[node name="ScaleComponent" type="Node" parent="." node_paths=PackedStringArray("sprite")]
script = ExtResource("3_art0g")
sprite = NodePath("../AnimatedSprite2D")

[node name="FlashComponent" type="Node" parent="." node_paths=PackedStringArray("sprite")]
script = ExtResource("4_sgibo")
sprite = NodePath("../AnimatedSprite2D")

[node name="ShakeComponent" type="Node" parent="." node_paths=PackedStringArray("node")]
script = ExtResource("5_x8yn2")
node = NodePath("../AnimatedSprite2D")

[node name="HurtboxComponent" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 0
script = ExtResource("7_rbyvk")

[node name="HitboxComponent" type="Area2D" parent="."]
collision_layer = 0
script = ExtResource("8_0e4hv")

[node name="HurtComponent" type="Node" parent="." node_paths=PackedStringArray("stats_component", "hurtbox_component")]
script = ExtResource("9_exd52")
stats_component = NodePath("../StatsComponent")
hurtbox_component = NodePath("../HurtboxComponent")

[node name="SpawnerComponent" type="Node2D" parent="."]
script = ExtResource("10_sptks")
scene = ExtResource("11_kt3vg")

[node name="DestroyedComponent" type="Node" parent="." node_paths=PackedStringArray("actor", "stats_component", "destroy_effect_spawner_component")]
script = ExtResource("12_ifdfq")
actor = NodePath("..")
stats_component = NodePath("../StatsComponent")
destroy_effect_spawner_component = NodePath("../SpawnerComponent")

[node name="ScoreComponent" type="Node" parent="."]
script = ExtResource("13_6wiho")
game_stats = ExtResource("14_eyqu4")

[node name="UpgradeSpawnerComponent" type="Node2D" parent="."]
script = ExtResource("10_sptks")
scene = ExtResource("15_xyl2a")

[node name="UpgradeRandomizer" type="Node" parent="."]
script = ExtResource("16_vv8oi")

[node name="VariablePitchAudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("17_ltgn5")
volume_db = 5.0
bus = &"Sounds"
script = ExtResource("18_ifb6r")
